<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Lab_2_Baginsky_3ISTyd_122</string>
<string name="text_view_hello">My First Application</string>
<string name="action_settings">Settings</string>
<string name="_8">8</string>
<string name="editText1">  </string>
<string name="_1">1</string>
<string name="_eq">=</string>
<string name="_2">2</string>
<string name="_div">/</string>
<string name="_0">0</string>
<string name="_point">.</string>
<string name="_4">4</string>
<string name="_add">+</string>
<string name="_7">7</string>
<string name="_6">6</string>
<string  name="_sub">-</string>
<string name="_5">5</string>
<string name="_3">3</string>
<string name="_mul">*</string>
<string name="_9">9</string>
<string name="tags_number">number</string>
<string name="tags_operation">operation</string>
<string name="tags_execute">execute</string>
    
<string  name="_sqrt">√</string>
<string  name="_pow">^</string>
<string  name="_m">M</string>
<string  name="_mc">MC</string>
</resources>
